<resources>
    <string name="app_name">Choizy</string>
    <string name="title_home">Home</string>
    <string name="title_cart">My Cart</string>
    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="onboarding1_heading_2">to Choizy</string>
    <string name="mapKey" translatable="false">AIzaSyAokIlf3kA2V3nPkJcIrZsnY7Yat3ISSwU</string>
    <string name="onboarding1_text">Far far away, behind the word mountains,
far from the countries Vokalia and Consonantia, there live the blind texts.</string>
    <string name="offer_add_to_card">Offer Added to cart</string>

    <string name="clearCartDialogMsg">Your cart contains item\'s another vendor would u like to clear the cart and add new item</string>
    <string name="clear">Clear</string>
    <string name="create_new_order">Create new order</string>
    <string name="pay_cancel">Payment Canceled</string>
    <string name="invalid_QR">Invalid QR Code</string>
    <string name="insufficient_credit">insufficient credit</string>
    <string name="delivery">Delivery</string>
    <string name="pick_up">Pick Up</string>
    <string name="your_address">Your Address</string>
    <string name="set_delivery_address">Set Delivery Address</string>
    <string name="select_address">Select Address</string>
    <string name="order_id">Order ID</string>
    <string name="birthday">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="nic_number">NIC number</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="change">Change</string>
    <string name="logout">Logout</string>
    <string name="submit">submit</string>
    <string name="write_feedback">Write feedback</string>
    <string name="thank_feedback">Thank you for the Feedback</string>
    <string name="about_us">About us</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="sinhala">Sinhala</string>
    <string name="tamil">Tamil</string>
    <string name="purchases">Purchases</string>
    <string name="deals_offers">Deals/Offers</string>
    <string name="recommended">Recommended</string>
    <string name="add_to_cart_this_offer">Add to cart this offer</string>
    <string name="purchase_now_this_offer">purchase now this offer</string>
    <string name="description">Description</string>
    <string name="current_offers">Current Offers</string>
    <string name="location">Location</string>
    <string name="order_now">Order Now</string>
    <string name="advanced_order">Advanced Order</string>
    <string name="payment_type">Payment Type</string>
    <string name="total">Total</string>
    <string name="processed">Processed</string>
    <string name="order_pleased_successfully">Order Pleased Successfully!</string>
    <string name="your_order_number">Your Order Number</string>
    <string name="go_to_home">Go to Home</string>
    <string name="thank_you_come_again">Thank You Come Again!</string>
    <string name="ongoing">Ongoing</string>
    <string name="history">History</string>
    <string name="you_order">You Order</string>
    <string name="go_to_payments">Go to payments</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>

    <string name="about_txt">"Choizy" is a mobile app released to facilitate learning for students studying at hogwards university. There are many things that students can get from the various categories provided by this. The specialty here is that the students studying at our university are basically getting offers for everything that is available here. It also includes short-term credit facilities. We hope that by creating this we will have some advantage and some support for our students\' learning activities.</string>
    <string name="login">Login</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="type_here">Type here...</string>
    <string name="log_in">Log In</string>

    <string-array name="locations">
        <item>All Branches</item>
        <item>Colombo</item>
        <item>Negombo</item>
        <item>Nugegoda</item>
        <item>Bambalapitiya</item>
        <item>Kandy</item>
    </string-array>


    <string-array name="payment_types">
        <item>Cash</item>
        <item>Card</item>
        <item>Loan</item>
        <item>QR-Pay</item>
    </string-array>
    <string-array name="payment_typesWithQR">
        <item>Cash</item>
        <item>Card</item>
        <item>Loan</item>
    </string-array>
</resources>