<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:elevation="20dp"
    android:backgroundTint="?attr/colorOnPrimary"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/language"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <RadioGroup
        android:id="@+id/langRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.060000002">

        <RadioButton
            android:id="@+id/langEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="26sp"

            />

        <RadioButton
            android:id="@+id/langSin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sinhala"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/langTamil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tamil"
            android:textSize="26sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>