<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.ProfileFragment">


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_back3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_top_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileBirthDateTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profileGenderTIL"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileGenderTIL"
        app:layout_constraintTop_toBottomOf="@+id/profileGenderTIL"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintWidth_percent="0.9"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:hint="@string/birthday"
            android:background="@drawable/edit_text_style"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileGenderTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profileNICTIL"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileNICTIL"
        app:layout_constraintTop_toBottomOf="@+id/profileNICTIL"
        app:layout_constraintVertical_bias="0.035"
        app:layout_constraintWidth_percent="0.9"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:hint="@string/gender"
            android:background="@drawable/edit_text_style"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileNICTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profileMobileTIL"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileMobileTIL"
        app:layout_constraintTop_toBottomOf="@+id/profileMobileTIL"
        app:layout_constraintVertical_bias="0.03"
        android:textColorHint="@color/white"
        app:layout_constraintWidth_percent="0.9"
        app:hintTextColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:hint="@string/nic_number"
            android:background="@drawable/edit_text_style"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileMobileTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profileEmailTIL"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileEmailTIL"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailTIL"
        app:layout_constraintVertical_bias="0.025"
        app:layout_constraintWidth_percent="0.9"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:endIconMode="custom"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:hint="@string/mobile"
            android:background="@drawable/edit_text_style"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/profileStudentImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,2:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/profileStudIDTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NG/25/19"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profileStudentImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toEndOf="@+id/profileStudentImg"
        app:layout_constraintTop_toTopOf="@+id/profileStudentImg"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/profileStudNameTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sonal "
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileStudIDTxt"
        app:layout_constraintTop_toBottomOf="@+id/profileStudIDTxt"
        app:layout_constraintVertical_bias="0.00999999" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileEmailTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileStudentImg"
        app:layout_constraintTop_toBottomOf="@+id/profileStudentImg"
        app:layout_constraintVertical_bias="0.19999999"
        app:layout_constraintWidth_percent="0.9"
        app:endIconMode="custom"
        app:hintTextColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_style"
            android:inputType="none"
            android:hint="@string/email"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/profileChangePassBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileBirthDateTIL"
        app:layout_constraintTop_toBottomOf="@+id/profileBirthDateTIL"
        app:layout_constraintVertical_bias="0.050000012" />

    <ImageView
        android:id="@+id/profileImgBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minHeight="40dp"
        app:tint="@color/white"
        app:layout_constraintHeight_percent="0.035"
        app:layout_constraintDimensionRatio="2:2"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/profileStudentImg"
        app:layout_constraintEnd_toEndOf="@+id/profileStudentImg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/profileStudentImg"
        app:layout_constraintTop_toTopOf="@+id/profileStudentImg"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>